--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@eslint/js": "9.12.0",
     "@rocketseat/eslint-config": "2.2.2",
+    "@types/bcryptjs": "2.4.6",
     "@types/node": "22.7.6",
     "eslint": "8.57.1",
     "globals": "15.11.0",
@@ -25,6 +26,7 @@
   },
   "dependencies": {
     "@prisma/client": "5.21.1",
+    "bcryptjs": "2.4.3",
     "fastify": "^5.0.0",
     "solid": "file:",
     "zod": "3.23.8"
